@@ -1,3 +1,8 @@
+1999-12-02  Kenichi OKADA <okada@opaopa.org>
+
+	* scram-md5.el: New file.
+	* FLIM-ELS (flim-modules): Add `scram-md5'.
+
 1999-12-01  Kenichi OKADA <okada@opaopa.org>
 
 	* smtp.el (smtp-auth-anonymous): New function.
